# PDF-auto-split

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: run_pipeline.py  test_embeddings.py
src/file_organization/: __init__.py
src/pdf_auto_split/: __init__.py
tests/: test_neuro_symbolic_pipeline.py
