[project]
name = "file-organization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
